adding / to the beginning of urls

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
 
-  <!--build:css css/main.min.css-->
-  <link rel="stylesheet" href="css/main.css" />
-  <!--endbuild-->
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body>
+  <!-- 
+    All hyperlinks must start with a '/'
+    for example:
+    <a href="/">Home</a>
+    <a href="/example.html">Example page</a>
+   -->
 
-  <!--build:js js/main.min.js -->
-  <script src="js/main.js"></script>
-  <!-- endbuild -->
+
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
