--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/index.css" />
 </head>
 
 <body>
@@ -17,7 +17,6 @@
     <a href="/">Home</a>
     <a href="/example.html">Example page</a>
     -->
-
 
     <script src="/js/main.js"></script>
 </body>
