including an example navbar

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,35 @@
 </head>
 
 <body>
+    <!-- This is the start of the navbar -->
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar__group">
+                <div class="navbar__brand">random website</div>
+
+                <div class="navbar__hamburger">
+                    <a href="#"><i class="fas fa-bars"></i></a>
+                </div>
+            </div>
+
+            <ul class="navbar__links">
+                <li class="navbar__link"><a href="#">Home</a></li>
+                <li class="navbar__link"><a href="#">About</a></li>
+                <li class="navbar__link"><a href="#">Services</a></li>
+                <li class="navbar__link"><a href="#">Contact</a></li>
+                <li class="navbar__link navbar__link--has-submenu">
+                    <a tabindex="0">Example drop-down</a>
+                    <ul class="navbar__sub-nav">
+                        <li class="navbar__sub-link"><a href="#">1</a></li>
+                        <li class="navbar__sub-link"><a href="#">2</a></li>
+                        <li class="navbar__sub-link"><a href="#">3</a></li>
+                        <li class="navbar__sub-link"><a href="#">4</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- This is the end of the navbar -->
     <!-- 
     All hyperlinks must start with a '/'
     for example:
