--- a/src/index.html
+++ b/src/index.html
@@ -13,27 +13,27 @@
 <body>
     <!-- This is the start of the navbar -->
     <nav class="navbar">
-        <div class="container">
-            <div class="navbar__group">
+        <div class="navbar__nav container">
+            <div class="navbar__mobile">
                 <div class="navbar__brand">random website</div>
 
                 <div class="navbar__hamburger">
-                    <a href="#"><i class="fas fa-bars"></i></a>
+                    <i class="fas fa-bars"></i>=
                 </div>
             </div>
 
-            <ul class="navbar__links">
-                <li class="navbar__link"><a href="#">Home</a></li>
-                <li class="navbar__link"><a href="#">About</a></li>
-                <li class="navbar__link"><a href="#">Services</a></li>
-                <li class="navbar__link"><a href="#">Contact</a></li>
-                <li class="navbar__link navbar__link--has-submenu">
-                    <a tabindex="0">Example drop-down</a>
-                    <ul class="navbar__sub-nav">
-                        <li class="navbar__sub-link"><a href="#">1</a></li>
-                        <li class="navbar__sub-link"><a href="#">2</a></li>
-                        <li class="navbar__sub-link"><a href="#">3</a></li>
-                        <li class="navbar__sub-link"><a href="#">4</a></li>
+            <ul class="navbar__items">
+                <li class="navbar__item"><a class="navbar__link" href="#">Home</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="#">About</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="#">Services</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="#">Contact</a></li>
+                <li class="navbar__item navbar__item--has-dropdown">
+                    <a class="navbar__link navbar__link--dropdown" tabindex="0">Example drop-down</a>
+                    <ul class="navbar__dropdown">
+                        <li class="navbar__sub-item"><a class="navbar__link" href="#">1</a></li>
+                        <li class="navbar__sub-item"><a class="navbar__link" href="#">2</a></li>
+                        <li class="navbar__sub-item"><a class="navbar__link" href="#">3</a></li>
+                        <li class="navbar__sub-item"><a class="navbar__link" href="#">4</a></li>
                     </ul>
                 </li>
             </ul>
