--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,17 @@
             </div>
 
             <ul class="navbar__items">
-                <li class="navbar__item"><a class="navbar__link" href="#">Home</a></li>
+                <li class="navbar__item active"><a class="navbar__link" href="#">Home</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="#">About</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="#">Services</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="#">Contact</a></li>
                 <li class="navbar__item navbar__item--has-dropdown">
                     <a class="navbar__link navbar__link--dropdown" tabindex="0">Example drop-down</a>
                     <ul class="navbar__dropdown">
-                        <li class="navbar__sub-item"><a class="navbar__link" href="#">1</a></li>
-                        <li class="navbar__sub-item"><a class="navbar__link" href="#">2</a></li>
-                        <li class="navbar__sub-item"><a class="navbar__link" href="#">3</a></li>
-                        <li class="navbar__sub-item"><a class="navbar__link" href="#">4</a></li>
+                        <li class="navbar__item navbar__item--sub"><a class="navbar__link" href="#">1</a></li>
+                        <li class="navbar__item navbar__item--sub"><a class="navbar__link" href="#">2</a></li>
+                        <li class="navbar__item navbar__item--sub"><a class="navbar__link" href="#">3</a></li>
+                        <li class="navbar__item navbar__item--sub"><a class="navbar__link" href="#">4</a></li>
                     </ul>
                 </li>
             </ul>
