total folder restructure: ./dist to ./live moving the design files to ./design

--- a/design/src/index.html
+++ b/design/src/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
 
+    <!-- Internal CSS -->
     <link rel="stylesheet" href="/css/index.css" />
 </head>
 
@@ -39,14 +40,13 @@
             </ul>
         </div>
     </nav>
-    <!-- This is the end of the navbar -->
-    <!-- 
-    All hyperlinks must start with a '/'
-    for example:
-    <a href="/">Home</a>
-    <a href="/example.html">Example page</a>
-    -->
 
+    <!-- Content goes here -->
+
+    <!-- https://github.com/alpinejs/alpine/ -->
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.7.3/dist/alpine.min.js" defer></script>
+
+    <!-- Internal scripts -->
     <script src="/js/main.js"></script>
 </body>
 
