include a few updates

--- a/www/design/src/index.html
+++ b/www/design/src/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- This is the start of the navbar -->
     <nav class="navbar" x-data="{ navbar_open: false }" @click.away="navbar_open = false">
-        <div class="navbar__nav container">
+        <div class="navbar__nav">
             <div class="navbar__mobile">
                 <div class="navbar__brand"><a href="#">random website</a></div>
 
